# python_vs_c_vs_zig

./: .gitignore  README.md  app.py  build.zig  pyproject.toml
src/: quicksort.c  quicksort.h  quicksort.py  quicksort.zig
